<resources>
    <string name="app_name">Kurir</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="auth_heading">Selamat Datang</string>
    <string name="auth_sub_heading">Atasi segala kesibukan anda dengan kurir</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="login_menggunakan_facebook">Login menggunakan facebook</string>
    <string name="login_menggunakan_google">Login menggunakan google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_nomor_hp_anda_yang_sudah_terdaftar">Masukkan nomor hp anda yang sudah terdaftar</string>
    <string name="_62">+62</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="kirim">Kirim</string>
    <string name="isi_kolom_berikut_untuk_mendaftar">Isi kolom berikut untuk mendaftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="contoh_john_snow">Contoh. John Snow</string>
    <string name="email">Email</string>
    <string name="contoh_john_snow_winterfell_com">Contoh. john.snow@winterfell.com</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>

    <!-- FB -->
    <string name="facebook_app_id">2498859123665438</string>
    <string name="fb_login_protocol_scheme">fb2498859123665438</string>

    <!-- GOOGLE -->
    <string name="firebase_web_client_id_for_google">85381784831-rlrddl5bg3d6kon0iv755he3d3hgjt4l.apps.googleusercontent.com</string>
    <string name="masukkan_kode_yang_dikirim_ke_hp_anda">Masukkan kode yang dikirim ke hp anda</string>
    <string name="_0000">0000</string>
    <string name="validation_hint">_ _ _ _</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="masukkan_no_hp_terdaftar">Masukkan no hp terdaftar</string>
    <string name="beranda">Beranda</string>
    <string name="orderan">Orderan</string>
    <string name="inbox">Inbox</string>
    <string name="akun">Akun</string>
    <string name="chat">Chat</string>
    <string name="lacak_paket_kamu_di_sini">Lacak paket kamu di sini</string>
</resources>
