<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_fa"
        android:title="@string/beranda" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_clipboard_list_fa"
        android:title="@string/orderan" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_comment_dots_fa"
        android:title="@string/chat" />
    <item
        android:id="@+id/inboxFragment"
        android:icon="@drawable/ic_mail"
        android:title="@string/inbox" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_user_fa"
        android:title="@string/akun" />

</menu>