<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AuthFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/intro">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/d_24"
            android:layout_marginStart="@dimen/d_24"
            android:src="@drawable/intro_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/auth_logo"
                style="@style/auth_logo"
                android:layout_marginBottom="@dimen/d_20"/>

            <LinearLayout
                android:id="@+id/heading_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/auth_logo"
                android:layout_marginBottom="@dimen/d_20">

                <TextView
                    style="@style/auth_heading_text"
                    android:text="@string/auth_heading"/>

                <TextView
                    style="@style/auth_sub_heading_text"
                    android:text="@string/auth_sub_heading"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_reg_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading_text_container"
                android:weightSum="2"
                android:gravity="center"
                android:layout_marginBottom="@dimen/d_14"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/auth_login_button"
                    style="@style/auth_login_reg_button"
                    android:layout_marginRight="@dimen/d_8"
                    android:layout_marginLeft="@dimen/d_24"
                    android:layout_marginStart="@dimen/d_24"
                    android:layout_marginEnd="@dimen/d_8"
                    android:text="@string/login"/>

                <Button
                    android:id="@+id/auth_register_button"
                    style="@style/auth_login_reg_button"
                    android:layout_marginLeft="@dimen/d_8"
                    android:layout_marginStart="@dimen/d_8"
                    android:layout_marginRight="@dimen/d_24"
                    android:layout_marginEnd="@dimen/d_24"
                    android:text="@string/daftar"/>

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/auth_fb_login_button_gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/auth_fb_login_button"
                style="@style/auth_social_login_button"
                android:background="@drawable/auth_fb_login_button"
                android:textColor="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_facebook_f"
                android:drawableStart="@drawable/ic_facebook_f"
                android:layout_below="@id/login_reg_container"
                android:layout_marginBottom="@dimen/d_14"
                android:text="@string/login_menggunakan_facebook"/>

            <ProgressBar
                android:id="@+id/f_progress"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_below="@id/login_reg_container"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <Button
                android:id="@+id/auth_google_login_button"
                style="@style/auth_social_login_button"
                android:background="@drawable/auth_google_login_button"
                android:textColor="@color/colorTextPrimary"
                android:drawableLeft="@drawable/ic_google"
                android:drawableStart="@drawable/ic_google"
                android:layout_below="@id/auth_fb_login_button"
                android:text="@string/login_menggunakan_google"/>

            <ProgressBar
                android:id="@+id/g_progress"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_below="@id/auth_fb_login_button"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>